crates/engage/tests/integrations/snapshots/integrations__report_all_errors@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should display multiple task failures in a well-formatted way.
---
Some(
    1,
)
