crates/engage/tests/integrations/snapshots/integrations__report_all_errors@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should display multiple process failures in a well-formatted way.
---
#1
Error: failed to run 3 processes

#2 (which caused #1)
Error: failed to run `[redacted process name]`

#3 (which caused #2, causing #1)
Error: process exited unsuccessfully via [redacted exit status]
Help: review this process' logs to determine the cause

#4 (which caused #1)
Error: failed to run `[redacted process name]`

#5 (which caused #4, causing #1)
Error: process exited unsuccessfully via [redacted exit status]
Help: review this process' logs to determine the cause

#6 (which caused #1)
Error: failed to run `[redacted process name]`

#7 (which caused #6, causing #1)
Error: process exited unsuccessfully via [redacted exit status]
Help: review this process' logs to determine the cause
