crates/engage/tests/integrations/snapshots/integrations__report_all_errors@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should display multiple task failures in a well-formatted way.
---
       ╭─┬◀ starting
       ╰─┴▶ failure
