crates/engage/tests/integrations/snapshots/integrations__run_specific_process@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should exit successfully after running only `d`."
---
Some(
    0,
)
