crates/engage/tests/integrations/snapshots/integrations__run_specific_process@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should exit successfully after running only `d`."
---
  ╭─┬◀ starting
d │O│ hello world
  ╰─┴▶ success
