crates/engage/tests/integrations/snapshots/integrations__run_specific_process_with_deps@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should exit successfully after running `a` and `b`."
---

