crates/engage/tests/integrations/snapshots/integrations__run_specific_process_with_deps@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should exit successfully after running `a` and `b`."
---
  ╭─┬◀ starting
a │O│ hello world
b │O│ hello world
  ╰─┴▶ success
